--- a/blueprints/postgres-cluster/ente-server/externalsecret-superuser.yml
+++ b/blueprints/postgres-cluster/ente-server/externalsecret-superuser.yml
@@ -1,14 +1,14 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: postgres-listmonk
+  name: postgres-superuser
 spec:
   data:
     - remoteRef:
-        key: /postgres/listmonk/username
+        key: /postgres/ente/superuser/username
       secretKey: username
     - remoteRef:
-        key: /postgres/listmonk/password
+        key: /postgres/ente/superuser/password
       secretKey: password
   refreshInterval: 24h
   secretStoreRef:
