--- a/blueprints/postgres-cluster/ente-server/externalsecret-user.yml
+++ b/blueprints/postgres-cluster/ente-server/externalsecret-user.yml
@@ -1,14 +1,14 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: postgres-superuser
+  name: postgres-user
 spec:
   data:
     - remoteRef:
-        key: /postgres/superuser/username
+        key: /ente/db/user
       secretKey: username
     - remoteRef:
-        key: /postgres/superuser/password
+        key: /ente/db/password
       secretKey: password
   refreshInterval: 24h
   secretStoreRef:
