--- a/blueprints/cloudnative-pg/helm-values.yml
+++ b/blueprints/cloudnative-pg/helm-values.yml
@@ -171,7 +171,8 @@ monitoring:
     # -- Label value that ConfigMaps should have to be loaded as dashboards.  DEPRECATED: Use labels instead.
     sidecarLabelValue: "1"
     # -- Labels that ConfigMaps should have to get configured in Grafana.
-    labels: {}
+    labels:
+      grafana_dashboard: "1"
     # -- Annotations that ConfigMaps can have to get configured in Grafana.
     annotations: {}
 
