--- a/blueprints/ente-accounts/ciliumnetworkpolicy.yml
+++ b/blueprints/ente-accounts/ciliumnetworkpolicy.yml
@@ -2,7 +2,7 @@
 apiVersion: cilium.io/v2
 kind: CiliumNetworkPolicy
 metadata:
-  name: ente-web
+  name: ente-accounts
 spec:
   endpointSelector:
     matchLabels: {}
