--- a/blueprints/ente-accounts/httproute.yml
+++ b/blueprints/ente-accounts/httproute.yml
@@ -1,10 +1,10 @@
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
-  name: ente-web
+  name: ente-accounts
 spec:
   hostnames:
-    - photos.developer-friendly.blog
+    - accounts.developer-friendly.blog
   parentRefs:
     - group: gateway.networking.k8s.io
       kind: Gateway
