--- a/blueprints/ente-accounts/rule.yml
+++ b/blueprints/ente-accounts/rule.yml
@@ -2,7 +2,7 @@
 apiVersion: oathkeeper.ory.sh/v1alpha1
 kind: Rule
 metadata:
-  name: ente-photos
+  name: ente-accounts
 spec:
   authenticators:
     - handler: anonymous
@@ -17,9 +17,9 @@ spec:
       - PUT
       - DELETE
       - PATCH
-    url: http<s?>://photos.developer-friendly.blog</?.*>
+    url: http<s?>://accounts.developer-friendly.blog</?.*>
   mutators:
     - handler: header
   upstream:
     preserveHost: true
-    url: http://ente-web.default:80
+    url: http://ente-accounts.ente:80
