--- a/blueprints/ente-auth/kustomization.yml
+++ b/blueprints/ente-auth/kustomization.yml
@@ -1,34 +1,29 @@
 configMapGenerator:
-  - name: ente-server-envs
+  - name: ente-auth
     envs:
       - configs.env
-  - name: ente-server-files
-    files:
-      - config.yml
 
 resources:
-  - externalsecret-file.yml
-  - externalsecret-envs.yml
   - ciliumnetworkpolicy.yml
-  - service.yml
-  - serviceaccount.yml
   - deployment.yml
   - httproute.yml
+  - rule.yml
+  - service.yml
+  - serviceaccount.yml
   - vmservicescrape.yml
 
 images:
-  - name: ghcr.io/ente-io/server
-    newName: ghcr.io/meysam81/ente-docker/ente-server
-    newTag: "20250208-arm64"
+  - name: ghcr.io/meysam81/ente-docker/ente-auth
+    newTag: "20250208"
 
 labels:
   - includeSelectors: true
     pairs:
-      app.kubernetes.io/component: ente-server
-      app.kubernetes.io/instance: ente-server
+      app.kubernetes.io/component: ente-auth
+      app.kubernetes.io/instance: ente-auth
       app.kubernetes.io/managed-by: Kustomize
-      app.kubernetes.io/name: ente-server
-      app.kubernetes.io/part-of: ente-server
+      app.kubernetes.io/name: ente-auth
+      app.kubernetes.io/part-of: ente-auth
       app.kubernetes.io/version: v1.0.0
 
 replacements:
