--- a/blueprints/ente-auth/service.yml
+++ b/blueprints/ente-auth/service.yml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: ente-web
+  name: ente-auth
 spec:
   ports:
     - port: 80
       protocol: TCP
-      targetPort: photos
+      targetPort: http
       name: http
