--- a/kubernetes/newsletter-server/gitops/ente-accounts.yml
+++ b/kubernetes/newsletter-server/gitops/ente-accounts.yml
@@ -1,12 +1,12 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: ente-web
+  name: ente-accounts
   namespace: flux-system
 spec:
   force: false
   interval: 1h
-  path: ./blueprints/ente-web
+  path: ./blueprints/ente-accounts
   prune: true
   sourceRef:
     kind: GitRepository
