--- a/kubernetes/newsletter-server/gitops/ente-photos.yml
+++ b/kubernetes/newsletter-server/gitops/ente-photos.yml
@@ -1,17 +1,17 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: ente-server
+  name: ente-photos
   namespace: flux-system
 spec:
   force: false
   interval: 1h
-  path: ./blueprints/ente-server
+  path: ./blueprints/ente-photos
   prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
     namespace: flux-system
-  targetNamespace: ente
+  targetNamespace: default
   timeout: 1m
   wait: true
