chore: explicitly disable suspend for kustomizations

--- a/kubernetes/newsletter-server/gitops/amazon-eks-pod-identity-webhook.yml
+++ b/kubernetes/newsletter-server/gitops/amazon-eks-pod-identity-webhook.yml
@@ -13,6 +13,7 @@ spec:
     kind: OCIRepository
     name: kustomizations
     namespace: flux-system
+  suspend: false
   targetNamespace: kube-system
   timeout: 1m
   wait: true
