--- a/kubernetes/newsletter-server/gitops/gateway.yml
+++ b/kubernetes/newsletter-server/gitops/gateway.yml
@@ -13,6 +13,7 @@ spec:
     kind: GitRepository
     name: flux-system
     namespace: flux-system
+  suspend: false
   targetNamespace: cert-manager
   timeout: 5m
   wait: true
