--- a/kubernetes/newsletter-server/gitops/helm-repositories.yml
+++ b/kubernetes/newsletter-server/gitops/helm-repositories.yml
@@ -1,3 +1,4 @@
+---
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
@@ -12,6 +13,7 @@ spec:
     kind: GitRepository
     name: flux-system
     namespace: flux-system
+  suspend: false
   targetNamespace: flux-system
   timeout: 1m
   wait: false
