--- a/kubernetes/newsletter-server/gitops/secured-httproutes.yml
+++ b/kubernetes/newsletter-server/gitops/secured-httproutes.yml
@@ -1,3 +1,4 @@
+---
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
@@ -12,5 +13,6 @@ spec:
     kind: GitRepository
     name: flux-system
     namespace: flux-system
+  suspend: false
   timeout: 5m
   wait: true
