--- a/blueprints/postgres-cluster/ente-server/kustomization.yml
+++ b/blueprints/postgres-cluster/ente-server/kustomization.yml
@@ -1,5 +1,6 @@
 resources:
   - cluster.yml
+  - externalsecret-hetzner-blob.yml
   - externalsecret-superuser.yml
   - externalsecret-user.yml
   - scheduledbackup.yml
