disable suspend of helmreleases

--- a/blueprints/oathkeeper/referencegrant.yml
+++ b/blueprints/oathkeeper/referencegrant.yml
@@ -19,6 +19,9 @@ spec:
     - group: gateway.networking.k8s.io
       kind: HTTPRoute
       namespace: kube-system
+    - group: gateway.networking.k8s.io
+      kind: HTTPRoute
+      namespace: ente
   to:
     - group: ""
       kind: Service
