--- a/blueprints/ente-photos/kustomization.yml
+++ b/blueprints/ente-photos/kustomization.yml
@@ -7,7 +7,7 @@ resources:
   - ciliumnetworkpolicy.yml
   - deployment.yml
   - httproute.yml
-  - rule.yml
+  # - rule.yml
   - service.yml
   - serviceaccount.yml
   - vmservicescrape.yml
