chore: bypass oathkeeper for all ente frontends

--- a/blueprints/ente-accounts/ciliumnetworkpolicy.yml
+++ b/blueprints/ente-accounts/ciliumnetworkpolicy.yml
@@ -7,11 +7,8 @@ spec:
   endpointSelector:
     matchLabels: {}
   ingress:
-    - fromEndpoints:
-        - matchLabels:
-            k8s:app.kubernetes.io/name: oathkeeper
-            k8s:io.cilium.k8s.policy.serviceaccount: oathkeeper
-            k8s:io.kubernetes.pod.namespace: auth
+    - fromEntities:
+        - ingress
       toPorts:
         - ports:
             - port: "8080"
