--- a/blueprints/ente-accounts/httproute.yml
+++ b/blueprints/ente-accounts/httproute.yml
@@ -14,8 +14,7 @@ spec:
   rules:
     - backendRefs:
         - kind: Service
-          name: oathkeeper-proxy
-          namespace: auth
+          name: ente-accounts
           port: 80
       filters:
         - responseHeaderModifier:
