chore: add cors headers to photos

--- a/blueprints/ente-photos/configs.env
+++ b/blueprints/ente-photos/configs.env
@@ -1,1 +1,2 @@
 SERVER_CORS_ALLOW_ORIGINS=https://*.developer-friendly.blog
+SERVER_CORS_ALLOW_HEADERS=origin, content-type, authorization, X-Auth-Token, X-Client-Package
