chore: fetch region from secret file

--- a/blueprints/ente-server/externalsecret-file.yml
+++ b/blueprints/ente-server/externalsecret-file.yml
@@ -17,6 +17,9 @@ spec:
     - remoteRef:
         key: /ente/s3/b2-eu-cen/bucket
       secretKey: ENTE_S3_B2_EU_CEN_BUCKET
+    - remoteRef:
+        key: /ente/s3/b2-eu-cen/region
+      secretKey: ENTE_S3_B2_EU_CEN_REGION
   refreshInterval: 24h
   secretStoreRef:
     kind: ClusterSecretStore
@@ -30,4 +33,5 @@ spec:
               bucket: "{{ .ENTE_S3_B2_EU_CEN_BUCKET | toString }}"
               endpoint: "{{ .ENTE_S3_B2_EU_CEN_ENDPOINT | toString }}"
               key: "{{ .ENTE_S3_B2_EU_CEN_KEY | toString }}"
+              region: "{{ .ENTE_S3_B2_EU_CEN_REGION | toString }}"
               secret: "{{ .ENTE_S3_B2_EU_CEN_SECRET | toString }}"
