--- a/blueprints/ente-photos/configs.env
+++ b/blueprints/ente-photos/configs.env
@@ -1,2 +1,3 @@
 SERVER_CORS_ALLOW_ORIGINS=https://*.developer-friendly.blog
 SERVER_CORS_ALLOW_HEADERS=origin, content-type, authorization, X-Auth-Token, X-Client-Package
+SERVER_REDIRECT_TRAILING_SLASH=false
