chore: add meysam.io domain

--- a/ansible/newsletter-server/haproxy.cfg
+++ b/ansible/newsletter-server/haproxy.cfg
@@ -109,8 +109,11 @@ frontend https
   acl k8s_oidc path /.well-known/openid-configuration || path /openid/v1/jwks
   use_backend k8s_apiserver if k8s_host k8s_oidc
 
-  acl k8s hdr_end(host) -i developer-friendly.blog
-  use_backend k8s if k8s
+  acl devblog hdr_end(host) -i developer-friendly.blog
+  use_backend k8s if devblog
+
+  acl meysam_io hdr_end(host) -i meysam.io
+  use_backend k8s if meysam_io
 
   default_backend not_found
 
