chore: move ente frontend to github pages

--- a/blueprints/ente-server/config.yml
+++ b/blueprints/ente-server/config.yml
@@ -9,7 +9,7 @@ s3:
     primary: b2-eu-cen
 smtp:
   port: 587
-  sender-name: Developer Friendly
+  sender-name: Meysam Ente Server
 webauthn:
   rpid: meysam.io
   rporigins:
