chore: move hoarder to personal domain

--- a/blueprints/hoarder/httproute.yml
+++ b/blueprints/hoarder/httproute.yml
@@ -6,6 +6,7 @@ metadata:
 spec:
   hostnames:
     - hoarder.developer-friendly.blog
+    - hoarder.meysam.io
   parentRefs:
     - group: gateway.networking.k8s.io
       kind: Gateway
