chore: change base url of the hoarder app

--- a/blueprints/hoarder/configs.env
+++ b/blueprints/hoarder/configs.env
@@ -9,7 +9,7 @@ MEILI_ENV=production
 MEILI_LOG_LEVEL=info
 MEILI_MASTER_KEY=
 NEXTAUTH_SECRET=
-NEXTAUTH_URL=https://hoarder.developer-friendly.blog
+NEXTAUTH_URL=https://hoarder.meysam.io
 OAUTH_PROVIDER_NAME=google
 OAUTH_WELLKNOWN_URL=https://accounts.google.com/.well-known/openid-configuration
 OPENAI_API_KEY=
