chore: upgrade vlogs to v1.10 and remove grafana cloud reference

--- a/kubernetes/newsletter-server/monitoring/victorialogs.yml
+++ b/kubernetes/newsletter-server/monitoring/victorialogs.yml
@@ -4,6 +4,8 @@ kind: VLogs
 metadata:
   name: victorialogs
 spec:
+  image:
+    tag: v1.10.0-victorialogs-scratch
   removePvcAfterDelete: false
   replicaCount: 1
   retentionPeriod: 1y
