--- a/blueprints/promtail/helm-values.yml
+++ b/blueprints/promtail/helm-values.yml
@@ -269,9 +269,7 @@ extraArgs:
 extraEnv: []
 
 # -- Extra environment variables from secrets or configmaps
-extraEnvFrom:
-  - secretRef:
-      name: grafana-cloud
+extraEnvFrom: []
 
 # -- Configure enableServiceLinks in pod
 enableServiceLinks: true
