chore: manually upgrade promtail to 3.4.1

--- a/blueprints/promtail/helm-values.yml
+++ b/blueprints/promtail/helm-values.yml
@@ -101,7 +101,7 @@ image:
   # -- Docker image repository
   repository: grafana/promtail
   # -- Overrides the image tag whose default is the chart's appVersion
-  tag: ""
+  tag: 3.4.1
   # -- Docker image pull policy
   pullPolicy: IfNotPresent
 
