--- a/kubernetes/newsletter-server/gitops/namespaces.yml
+++ b/kubernetes/newsletter-server/gitops/namespaces.yml
@@ -13,3 +13,7 @@ items:
     kind: Namespace
     metadata:
       name: database
+  - apiVersion: v1
+    kind: Namespace
+    metadata:
+      name: plausible
