chore: fine tune the pg configurations

--- a/blueprints/postgres-cluster/ente-server/cluster.yml
+++ b/blueprints/postgres-cluster/ente-server/cluster.yml
@@ -34,37 +34,37 @@ spec:
   postgresql:
     parameters:
       auto_explain.log_min_duration: 500ms
+      autovacuum: "on"
       autovacuum_analyze_scale_factor: "0.1"
       autovacuum_analyze_threshold: "50"
-      autovacuum_max_workers: "2"
+      autovacuum_max_workers: "1"
       autovacuum_naptime: 10min
       autovacuum_vacuum_scale_factor: "0.2"
       autovacuum_vacuum_threshold: "50"
-      autovacuum: "on"
       checkpoint_completion_target: "0.9"
       default_statistics_target: "100"
       effective_cache_size: 1GB
       effective_io_concurrency: "200"
-      huge_pages: off
+      huge_pages: "off"
       log_min_duration_statement: 100ms
       maintenance_work_mem: 256MB
       max_connections: "100"
       max_parallel_maintenance_workers: "2"
-      max_parallel_workers_per_gather: "2"
       max_parallel_workers: "2"
-      max_wal_size: 2GB
+      max_parallel_workers_per_gather: "2"
+      max_wal_size: 4GB
       max_worker_processes: "4"
       min_wal_size: 128MB
       pg_stat_statements.max: "10000"
       pg_stat_statements.track: all
+      pgaudit.log: all, -misc
       pgaudit.log_catalog: "off"
       pgaudit.log_parameter: "on"
       pgaudit.log_relation: "on"
-      pgaudit.log: all, -misc
       random_page_cost: "1.1"
       shared_buffers: 1GB
       wal_buffers: 16MB
-      work_mem: 26214kB
+      work_mem: 16MB
   storage:
     size: 10Gi
     storageClass: hcloud-volumes-encrypted
