chore: remove template escape from VM alertmanager config

--- a/kubernetes/newsletter-server/monitoring/kustomization.yml
+++ b/kubernetes/newsletter-server/monitoring/kustomization.yml
@@ -26,6 +26,6 @@ resources:
 
   - kube-prometheus-dashboards.yml
   - vmservicescrape-haproxy.yml
-  - victorialogs.yml
+  - vlogs-victorialogs.yml
 
 namespace: monitoring
