--- a/kubernetes/newsletter-server/backups/cronjob-hoarder.yml
+++ b/kubernetes/newsletter-server/backups/cronjob-hoarder.yml
@@ -1,47 +1,70 @@
+---
 apiVersion: batch/v1
 kind: CronJob
 metadata:
   name: backup-hoarder
   namespace: default
 spec:
-  successfulJobsHistoryLimit: 3
-  failedJobsHistoryLimit: 1
   concurrencyPolicy: Replace
+  failedJobsHistoryLimit: 1
   jobTemplate:
     metadata:
       name: backup-hoarder
     spec:
-      parallelism: 1
-      completions: 1
       backoffLimit: 3
+      completions: 1
+      parallelism: 1
       template:
         metadata:
           labels:
             app: backup-hoarder
         spec:
           containers:
-            - command:
-                - sh
-                - -c
-              args:
+            - args:
                 - |
                   set -eu
                   mc alias set hetzner-blob-storage https://nbg1.your-objectstorage.com $ACCESS_KEY_ID $ACCESS_SECRET_KEY
-                  mc cp --recursive /hoarder/ hetzner-blob-storage/meysam/hoarder/$(date +%Y-%m-%d)/
+                  mc cp hoarder.tar.bz2 hetzner-blob-storage/meysam/hoarder/$(date +%Y-%m-%d)/
                   mc rm --recursive --force hetzner-blob-storage/meysam/hoarder --older-than 30d
+              command:
+                - sh
+                - "-c"
               envFrom:
                 - secretRef:
                     name: hetzner-blob-storage
               image: minio/minio:RELEASE.2025-02-18T16-25-55Z
-              name: minio-client
+              name: upload-to-hetzner-blob
               resources: {}
               volumeMounts:
-                - name: hoarder
-                  mountPath: /hoarder
+                - mountPath: /shared
+                  name: shared
                   readOnly: true
+              workingDir: /shared
+          initContainers:
+            - args:
+                - |
+                  set -eu
+
+                  tar cvjf /shared/hoarder.tar.bz2 .
+              command:
+                - sh
+                - "-c"
+              image: busybox:1
+              name: compress-filesystem
+              resources: {}
+              volumeMounts:
+                - mountPath: /hoarder
+                  name: hoarder
+                  readOnly: true
+                - mountPath: /shared
+                  name: shared
+              workingDir: /hoarder
+          restartPolicy: OnFailure
           volumes:
             - name: hoarder
               persistentVolumeClaim:
                 claimName: data-hoarder-0
-          restartPolicy: OnFailure
+            - emptyDir: {}
+              name: shared
   schedule: "@daily"
+  successfulJobsHistoryLimit: 3
