--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,4 @@ blueprints/plausible/compose*.yml
 blueprints/plausible/.env
 blueprints/plausible/clickhouse
 blueprints/plausible/statefulset.yml
+.env
