--- a/kubernetes/newsletter-server/gitops/robots-txt.yml
+++ b/kubernetes/newsletter-server/gitops/robots-txt.yml
@@ -14,6 +14,6 @@ spec:
     name: flux-system
     namespace: flux-system
   suspend: false
-  targetNamespace: ente
+  targetNamespace: default
   timeout: 1m
   wait: true
