chore: remove PDB from postgres clusters

--- a/blueprints/postgres-cluster/ente-server/cluster.yml
+++ b/blueprints/postgres-cluster/ente-server/cluster.yml
@@ -26,6 +26,7 @@ spec:
       owner: ente
       secret:
         name: postgres-user
+  enablePDB: false
   enableSuperuserAccess: true
   failoverDelay: 120
   instances: 1
