chore: add saturday to k8s upgrade schedules

--- a/kubernetes/newsletter-server/k8s-upgrades/plan-agent.yml
+++ b/kubernetes/newsletter-server/k8s-upgrades/plan-agent.yml
@@ -22,6 +22,7 @@ spec:
     image: rancher/k3s-upgrade
   window:
     days:
+      - saturday
       - sunday
     endTime: "06:00"
     startTime: "00:00"
