chore: bring back the maxmind license key

--- a/blueprints/plausible/configs.env
+++ b/blueprints/plausible/configs.env
@@ -3,7 +3,7 @@ DISABLE_REGISTRATION=invite_only
 
 HTTP_PORT=8000
 
-#MAXMIND_EDITION=GeoLite2-City
+MAXMIND_EDITION=GeoLite2-City
 
 SMTP_HOST_PORT=587
 SMTP_HOST_SSL_ENABLED=false
