--- a/blueprints/plausible/externalsecret.yml
+++ b/blueprints/plausible/externalsecret.yml
@@ -55,7 +55,7 @@ spec:
         DATABASE_URL: postgres://{{ .PG_DB_USER | toString }}:{{ .PG_DB_PASSWORD | toString }}@{{ .PG_DB_HOST | toString }}:5432/plausible
         GOOGLE_CLIENT_ID: "{{ .GOOGLE_CLIENT_ID | toString }}"
         GOOGLE_CLIENT_SECRET: "{{ .GOOGLE_CLIENT_SECRET | toString }}"
-        #MAXMIND_LICENSE_KEY: "{{ .MAXMIND_LICENSE_KEY | toString }}"
+        MAXMIND_LICENSE_KEY: "{{ .MAXMIND_LICENSE_KEY | toString }}"
         SECRET_KEY_BASE: "{{ .SECRET_KEY_BASE | toString }}"
         SMTP_HOST_ADDR: "{{ .SMTP_HOST_ADDR | toString }}"
         SMTP_USER_NAME: "{{ .SMTP_USER_NAME | toString }}"
