chore: send all upgrade info to slack info

--- a/kubernetes/newsletter-server/monitoring/vmalertmanagerconfig.yml
+++ b/kubernetes/newsletter-server/monitoring/vmalertmanagerconfig.yml
@@ -97,7 +97,9 @@ items:
         receiver: discord-info
         repeat_interval: 12h
         routes:
-          - group_by:
+          - active_time_intervals:
+              - everyday
+            group_by:
               - kind
               - severity
             matchers:
