fix(mon): add the missing route

--- a/kubernetes/newsletter-server/monitoring/vmalertmanagerconfig.yml
+++ b/kubernetes/newsletter-server/monitoring/vmalertmanagerconfig.yml
@@ -27,6 +27,7 @@ items:
       namespace: monitoring
     spec:
       receivers:
+        - name: ignore
         - name: slack-error
           slack_configs:
             - api_url:
