chore(mon): increase vmsingle storage to 20G

--- a/kubernetes/newsletter-server/monitoring/vmalertmanagerconfig.yml
+++ b/kubernetes/newsletter-server/monitoring/vmalertmanagerconfig.yml
@@ -5,6 +5,7 @@ items:
     kind: ExternalSecret
     metadata:
       name: alertmanager
+      namespace: monitoring
     spec:
       data:
         - remoteRef:
