chore: migrate promtail to alloy

--- a/blueprints/alloy/kustomization.yml
+++ b/blueprints/alloy/kustomization.yml
@@ -4,7 +4,7 @@ configurations:
 configMapGenerator:
   - files:
       - values.yaml=helm-values.yml
-    name: promtail
+    name: alloy
 
 resources:
   - rule.yml
