--- a/blueprints/alloy/helmrelease.yml
+++ b/blueprints/alloy/helmrelease.yml
@@ -1,22 +1,22 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: promtail
+  name: alloy
 spec:
   chart:
     spec:
-      chart: promtail
+      chart: alloy
       sourceRef:
         kind: HelmRepository
         name: grafana
         namespace: flux-system
-      version: 6.16.x
+      version: 0.x
   install:
     createNamespace: true
   interval: 1h
-  releaseName: promtail
+  releaseName: alloy
   targetNamespace: monitoring
   valuesFrom:
     - kind: ConfigMap
-      name: promtail
+      name: alloy
   suspend: false
