--- a/blueprints/alloy/httproute.yml
+++ b/blueprints/alloy/httproute.yml
@@ -1,10 +1,10 @@
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
-  name: promtail
+  name: alloy
 spec:
   hostnames:
-    - promtail.developer-friendly.blog
+    - alloy.developer-friendly.blog
   parentRefs:
     - group: gateway.networking.k8s.io
       kind: Gateway
