--- a/kubernetes/newsletter-server/gitops/alloy.yml
+++ b/kubernetes/newsletter-server/gitops/alloy.yml
@@ -2,12 +2,12 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: promtail
+  name: alloy
   namespace: flux-system
 spec:
   force: true
   interval: 1h
-  path: ./blueprints/promtail
+  path: ./blueprints/alloy
   prune: true
   sourceRef:
     kind: GitRepository
